--- a/src/main/resources/templates/profile/profileMyFavorite.html
+++ b/src/main/resources/templates/profile/profileMyFavorite.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>프로필_즐겨찾기</title>
     <div th:insert="~{fragments :: linkCSS}"></div>
 </head>
+<style>
+    .custom-hover {
+        color: black;
+        border: none;
+    }
+    .custom-hover:hover{
+        color: dodgerblue;
+        border-bottom: 3px solid dodgerblue;
+    }
+    .btn-group .btn:first-child {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    .btn-group .btn:last-child {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+</style>
 <body>
 <div th:insert="~{fragments :: header}"></div>
 <div class="container">
@@ -17,11 +37,6 @@
             <div class="target-div">
                 <div class="container d-flex align-items-start justify-content-between">
                     <img src="" th:src="${profileImage}" style="width: 100px; height: 100px;" alt="Profile Image"/>
-                    <!-- 편집 모드를 전환하는 버튼 -->
-                    <div>
-                        <a href="" class="editBtn btn btn-primary me-2" id="editBtnEnabled" onclick="toggleEditing(event)">Edit profile</a>
-                        <button type="button" class="btn btn-danger d-line-block" onclick="confirmDelete()">Delete</button>
-                    </div>
                 </div>
                 <h3>사용자명: <span th:text="${user != null ? user.getUsername() : ''}"></span></h3>
                 <h3>Email: <span th:text="${user != null ? user.getEmail() : ''}"></span></h3>
@@ -31,39 +46,65 @@
             <hr/>
 
             <div class="buttonMenu btn-group">
-                <button type="button" class="getMyBoard btn btn-outline-light custom-hover">내 게시물</button>
-                <button type="button" class="getMyComment btn btn-outline-light custom-hover">내 댓글</button>
-                <button type="button" class="getMyFavorite btn btn-outline-light custom-hover">즐겨찾기</button>
-                <button type="button" class="getMyLike btn btn-outline-light custom-hover">좋아요</button>
+                <!-- For getting My Board -->
+                <button data-action-url="/profile/posts" class="btn btn-outline-light custom-hover profileButton">
+                    내 게시글
+                </button>
+
+                <!-- Placeholder for comments; you can update these as necessary -->
+                <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
+                    댓글
+                </button>
+
+                <!-- For getting My Favorite -->
+                <button data-action-url="/profile/favorites" class="btn btn-outline-light custom-hover profileButton">
+                    즐겨찾기
+                </button>
+
+                <!-- coming soon -->
+                <button data-action-url="/profile/likes" class="btn btn-outline-light custom-hover profileButton">
+                    좋아요
+                </button>
             </div>
 
-            <form id="getMyBoardForm" th:action="@{/profile/posts}" method="post">
-                <input type="hidden" id="myBoardUsername" name="username" th:value="${user.getUsername()}">
-                <input type="hidden" id="myBoardEmail" name="email" th:value="${user.getEmail()}">
-                <!-- 내 게시글 눌렀을 때 생김 -->
-                <input type="hidden" th:if="${paging}" id="myBoardPage" name="page" th:value="${paging.number} + 1">
-            </form>
-            <form id="getMyFavoriteForm" th:action="@{/profile/favorites}" method="post">
-                <input type="hidden" id="myFvUsername" name="username" th:value="${user.getUsername()}">
-                <input type="hidden" id="myFvEmail" name="email" th:value="${user.getEmail()}">
-                <!-- 즐겨찾기 눌렀을 때 생김 -->
-                <input type="hidden" th:if="${paging}" id="myFvPage" name="page" th:value="${paging.number} + 1">
-            </form>
-            <form id="getByCommentForm" th:action="@{#}" method="post">
-                <!-- 댓글 만들면 만들 예정 -->
-            </form>
-            <form id="getMyLike" th:action="@{#}" method="post">
-                <!-- 곧 만들 예정 -->
+            <form id="profileForm" method="get" style="display: none;">
+                <input type="hidden" id="actionUrl">
             </form>
         </div>
         <div th:insert="~{fragments :: profile_get_data}"></div>
 
     </div>
 </div>
-
+<!-- 페이지 링크 누르면 페이지에 맞는 게시글 데이터 받아옴 -->
+<form th:action="@{/profile/posts}" method="get" id="pageForm">
+    <input type="hidden" id="page" name="page" th:value="${paging.number}">
+</form>
 
 
 <div th:insert="~{fragments :: footer}"></div>
 <div th:insert="~{fragments :: linkJS}"></div>
+<script layout:fragment="script" type='text/javascript' th:inline="javascript">
+    let profileButtons = document.getElementsByClassName("profileButton");
+    Array.from(profileButtons).forEach(function(button) {
+        button.addEventListener('click', function () {
+            let form = document.getElementById('profileForm');
+
+            // Change form action based on the button clicked
+            form.action = this.getAttribute('data-action-url');
+
+            form.submit();
+        });
+    });
+
+    const page_elements = document.getElementsByClassName("page-link");
+    Array.from(page_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            document.getElementById('page').value = this.dataset.page;
+            document.getElementById('pageForm').submit();
+        });
+    });
+
+
+</script>
 </body>
 </html>
