--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -50,6 +50,18 @@
         .commentDisLikeBtn:active {
             background-color: lightpink!important;
         }
+
+        .commentTrash {
+            border: none;
+            padding: 0;
+        }
+
+        .commentEdit {
+            height: 26px;
+            border: none;
+            border-radius: 25%!important;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
@@ -184,15 +196,17 @@
         <div>
             <span class="fs-5" th:text="${comments.getTotalElements() + '개의 댓글'}"></span>
             <div sec:authorize="isAnonymous()" class="my-4 rounded border p-3 my-sm-5 p-sm-4">
-                <div class="d-flex-align-items-center">
+                <div class="d-flex align-items-center">
                     <div class="rounded-circle me-3" style="width: 65px; height: 65px;">
-                        <!-- User profile image goes here -->
                         <img th:src="${profileImage}" alt="Profile Image" class="img-fluid rounded-circle"/>
                     </div>
-                    <textarea class="form-control" rows="3"></textarea>
+                    <div class="form-control" contenteditable="false" style="height: 90px;">
+                        <a href="/login" style="text-decoration: none;">로그인</a>
+                         후 이용가능합니다.
+                    </div>
                 </div>
                 <div class="d-flex justify-content-end mt-2">
-                    <button class="btn btn-primary">댓글 작성</button>
+                    <button class="btn btn-primary" disabled>댓글 작성</button>
                 </div>
             </div>
             <div sec:authorize="isAuthenticated()" class="my-4 rounded border p-3 my-sm-5 p-sm-4">
@@ -215,59 +229,100 @@
             </div>
                 <div class="my-8">
                     <ul class="list-unstyled">
-                        <li th:each="comment, commentStat : ${comments}" class="mb-3">
+                        <li th:each="comment, commentStat : ${comments}" class="mb-3" th:id="'comment-' + ${comment.cid}">
                             <div class="d-flex align-items-center">
                                 <div class="rounded-circle me-3" style="width: 65px; height: 65px;">
-                                    <!-- Comment author's profile image goes here -->
+                                    <!-- 댓글 작성자 프로필 이미지 -->
                                     <img th:src="${comment.getProfileImgDTOInComment().getPath()}" alt="Profile Image" class="img-fluid rounded-circle">
                                 </div>
                                 <div class="flex-grow-1">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="d-flex flex-column justify-content-center">
-                                            <!-- Comment author's name and comment content -->
+                                            <!-- 댓글 작성자 이름 -->
                                             <strong th:text="${comment.getUsersDTOInComment().getUsername()}">Author Name</strong>
                                             <p class="fw-normal user-select-none mb-0" style="font-size : 0.75rem; font-weight: 200!important;">며칠 전인지 나타내는 부분</p>
                                         </div>
-                                        <div class="btn-group">
-                                            <form th:action="@{/dislike/comment}" method="post" th:object="${commentLikeDTO}">
-                                                <input type="hidden" name="cid" th:value="${comment.getCid()}"/>
-                                                <input type="hidden" name="bid" th:value="${board.getBid()}"/>
-                                                <input type="hidden" name="page" th:value="${commentStat.index + 1}"/>
-                                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
-                                                <!-- TODO : 게시글 추천도 이런방식으로 해도 될듯 -->
-                                                <button
-                                                        th:class="${comment.likeStatus == 'DISLIKE'} ? 'commentDisLikeBtn btn btn-sm btn-outline-danger' :
-                                                        'btn btn-sm btn-outline-secondary'"
-                                                        style="font-size: 0.75rem;"
-                                                        th:disabled="${comment.likeStatus == 'LIKE'}">
-                                                    <!-- Add your Like icon here -->
-                                                    <i class="bi bi-chevron-down" th:style="${comment.likeStatus == 'DISLIKE'} ? 'color: tomato;' : ''"></i>
+                                        <!-- 로그인 안했을 때 -->
+                                        <div sec:authorize="isAnonymous()" class="d-flex">
+                                            <div class="btn-group">
+                                                <!-- 비추 버튼 -->
+                                                <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
+                                                    <i class="bi bi-chevron-down"></i>
                                                 </button>
-                                            </form>
-                                            <!-- Dislike button -->
-                                            <!-- Current number of likes -->
-                                            <button th:text="${comment.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled" style="font-size: 0.75rem;"></button>
-                                            <!-- Like button -->
-                                            <form th:action="@{/like/comment}" method="post" th:object="${commentLikeDTO}">
-                                                <input type="hidden" name="cid" th:value="${comment.getCid()}"/>
-                                                <input type="hidden" name="bid" th:value="${board.getBid()}"/>
-                                                <input type="hidden" name="page" th:value="${commentStat.index + 1}"/>
-                                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
-                                                <button
-                                                        th:class="${comment.likeStatus == 'LIKE'} ? 'commentLikeBtn btn btn-sm btn-outline-primary' :
-                                                        'btn btn-sm btn-outline-secondary'"
-                                                        style="font-size: 0.75rem;"
-                                                        th:disabled="${comment.likeStatus == 'DISLIKE'}">
-                                                    <!-- Add your Dislike icon here -->
-                                                    <i class="bi bi-chevron-up" th:style="${comment.likeStatus == 'LIKE'} ? 'color: dodgerblue;' : ''"></i>
+                                                <!-- 현재 추천 카운트 -->
+                                                <button th:text="${comment.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled" style="font-size: 0.75rem;"></button>
+                                                <!-- 추천 버튼 -->
+                                                <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
+                                                    <i class="bi bi-chevron-up"></i>
                                                 </button>
-                                            </form>
+                                            </div>
+                                        </div>
+                                        <!-- 로그인 했을 때 -->
+                                        <div sec:authorize="isAuthenticated()" class="d-flex">
+                                            <div class="btn-group">
+                                                <!-- 비추 버튼 -->
+                                                <form th:action="@{/dislike/comment}" method="post" th:object="${commentLikeDTO}">
+                                                    <input type="hidden" name="cid" th:value="${comment.getCid()}"/>
+                                                    <input type="hidden" name="bid" th:value="${board.getBid()}"/>
+                                                    <input type="hidden" name="page" th:value="${commentStat.index + 1}"/>
+                                                    <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                                    <!-- TODO : 게시글 추천도 이런방식으로 해도 될듯 -->
+                                                    <button
+                                                            th:class="${comment.likeStatus == 'DISLIKE'} ? 'commentDisLikeBtn btn btn-sm btn-outline-danger' :
+                                                        'btn btn-sm btn-outline-secondary'"
+                                                            style="font-size: 0.75rem;"
+                                                            th:disabled="${comment.likeStatus == 'LIKE'}">
+                                                        <i class="bi bi-chevron-down" th:style="${comment.likeStatus == 'DISLIKE'} ? 'color: tomato;' : ''"></i>
+                                                    </button>
+                                                </form>
+                                                <!-- 현재 추천 카운트 -->
+                                                <button th:text="${comment.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled" style="font-size: 0.75rem;"></button>
+                                                <!-- Like button -->
+                                                <form th:action="@{/like/comment}" method="post" th:object="${commentLikeDTO}">
+                                                    <input type="hidden" name="cid" th:value="${comment.getCid()}"/>
+                                                    <input type="hidden" name="bid" th:value="${board.getBid()}"/>
+                                                    <input type="hidden" name="page" th:value="${commentStat.index + 1}"/>
+                                                    <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                                    <button
+                                                            th:class="${comment.likeStatus == 'LIKE'} ? 'commentLikeBtn btn btn-sm btn-outline-primary' :
+                                                        'btn btn-sm btn-outline-secondary'"
+                                                            style="font-size: 0.75rem;"
+                                                            th:disabled="${comment.likeStatus == 'DISLIKE'}">
+                                                        <i class="bi bi-chevron-up" th:style="${comment.likeStatus == 'LIKE'} ? 'color: dodgerblue;' : ''"></i>
+                                                    </button>
+                                                </form>
+                                            </div>
+                                            <div class="btn-group ms-2" th:if="${comment.getUsersDTOInComment().getEmail()} == ${#authentication.name}">
+                                                <button th:id="'editBtn-' + ${comment.cid}" class="commentEdit btn btn-outline-primary px-2" th:onclick="'commentEditToggle(\'' + ${comment.cid} + '\')'">
+                                                    <i class="bi bi-pencil"></i>
+                                                </button>
+                                                <form id="commentDelete"
+                                                      th:action="@{/delete/comment}" method="post" th:object="${commentLikeDTO}" onclick="commentDeleteConfirm()">
+                                                    <input type="hidden" name="cid" th:value="${comment.getCid()}">
+                                                    <input type="hidden" name="bid" th:value="${board.getBid()}">
+                                                    <input type="hidden" name="page" th:value="${commentStat.index + 1}">
+                                                    <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                                    <button class="commentTrash btn btn-outline-danger px-2">
+                                                        <i class="bi bi-trash"></i>
+                                                    </button>
+                                                </form>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                                        <p th:text="${comment.content}">Comment content goes here...</p>
-                            <button class="replyBtn btn btn-sm btn-outline-secondary fw-normal my-3" style="font-size: 0.75rem;">댓글 쓰기</button>
+                            <p th:id="'commentContent-' + ${comment.cid}" class="commentContent" th:text="${comment.content}">Comment content goes here...</p>
+                            <!-- 댓글 편집 영역 (초기에는 숨겨져 있음) -->
+                            <form th:id="'editForm-' + ${comment.cid}" class="commentEditForm my-2" action="/edit/comment" method="post" style="display:none;">
+                                <textarea th:id="'editArea-' + ${comment.cid}" name="content" class="commentEditArea form-control my-2" oninput="adjustHeight(this)"></textarea>
+                                <input type="hidden" name="cid" th:value="${comment.getCid()}">
+                                <input type="hidden" name="bid" th:value="${board.getBid()}">
+                                <input type="hidden" name="page" th:value="${commentStat.index + 1}">
+                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                <button class="cancelBtn btn btn-outline-danger" th:onclick="'cancelCommentEdit(event, \'' + ${comment.cid} + '\')'">취소</button>
+                                <button type="submit" th:id="'saveBtn-' + ${comment.cid}" class="saveEdit btn btn-outline-success px-2" >수정</button>
+                            </form>
+                            <button th:id="'replyBtn-' + ${comment.cid}" class="replyBtn btn btn-sm btn-outline-secondary fw-normal my-3" style="font-size: 0.75rem;" th:onclick="'commentEditToggle(' + ${comment.cid} + ')'">댓글 쓰기</button>
                             <!-- Display the divider line for all comments except the last one -->
                             <hr th:unless="${commentStat.index + 1 >= comments.getTotalElements()}" class="m-0"/>
                         </li>
@@ -326,6 +381,62 @@
             window.location.href = "/login";
         }
     }
+
+    function commentEditToggle(commentId) {
+        console.log(commentId);
+        // 댓글 막 시작하는 <li> 부분의 th:id
+        const commentElem = document.getElementById('comment-' + commentId);
+        // 댓글 편집 전의 <p> 태그, 댓글의 내용 부분
+        const contentElem = document.getElementById('commentContent-' + commentId);
+        // 편집 기능의 연필 누른 후의 form
+        const editFormElem = document.getElementById('editForm-' + commentId);
+        // 편집 기능의 연필 누른 후의 textarea, display를 바꿀 필욘 없으나 content 값 받아와야 함
+        const editAreaElem = document.getElementById('editArea-' + commentId);
+        // 편집 기능 토글 기능을 하는 연필 아이콘
+        const editBtn = document.getElementById('editBtn-' + commentId);
+        // 대댓 쓰기 버튼
+        const replyBtn = document.getElementById('replyBtn-' + commentId);
+        // 취소랑 수정 버튼은 editFormElem display = 'block' 하면 생겨남
+        editAreaElem.value = contentElem.textContent;
+
+        replyBtn.style.display = 'none';
+        contentElem.style.display = 'none';
+        editFormElem.style.display = 'block';
+        editBtn.style.display = 'none';
+    }
+
+
+
+    function commentDeleteConfirm() {
+        const isConfirmed = confirm("삭제하시면 되돌릴 수 없습니다. 정말 삭제하시겠습니까?");
+
+        if (isConfirmed) {
+            const commentDeleteForm = document.getElementById("commentDelete");
+            commentDeleteForm.submit();
+        }
+    }
+
+    function cancelCommentEdit(event, commentId) {
+        console.log("cancel : " + commentId);
+        event.preventDefault();
+        // 댓글 막 시작하는 <li> 부분의 th:id
+        const commentElem = document.getElementById('comment-' + commentId);
+        // 댓글 편집 전의 <p> 태그, 댓글의 내용 부분
+        const contentElem = document.getElementById('commentContent-' + commentId);
+        // 편집 기능의 연필 누른 후의 form
+        const editFormElem = document.getElementById('editForm-' + commentId);
+        // 편집 기능 토글 기능을 하는 연필 아이콘
+        const editBtn = document.getElementById('editBtn-' + commentId);
+        // 대댓 쓰기 버튼
+        const replyBtn = document.getElementById('replyBtn-' + commentId);
+        // 취소랑 수정 버튼은 editFormElem display = 'none' 하면 사라짐
+
+        replyBtn.style.display = 'block';
+        contentElem.style.display = 'block';
+        editFormElem.style.display = 'none';
+        editBtn.style.display = 'block';
+    }
+
 
     function adjustHeight(textarea) {
         textarea.style.height = 'auto';
