댓글 무한스크롤 기능 추가

--- a/src/main/resources/templates/profile/profileMyBoard.html
+++ b/src/main/resources/templates/profile/profileMyBoard.html
@@ -45,7 +45,7 @@
             <hr/>
             <div class="buttonMenu btn-group">
                 <!-- For getting My Board -->
-                <button data-action-url="/profile/posts" class="btn btn-outline-light custom-hover profileButton">
+                <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
                     내 게시글
                 </button>
 
