--- a/src/main/resources/templates/profile/profileMyFavorite.html
+++ b/src/main/resources/templates/profile/profileMyFavorite.html
@@ -57,7 +57,7 @@
                 </button>
 
                 <!-- For getting My Favorite -->
-                <button data-action-url="/profile/favorites" class="btn btn-outline-light custom-hover profileButton">
+                <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
                     즐겨찾기
                 </button>
 
