--- a/src/main/resources/templates/profile/profileMyLike.html
+++ b/src/main/resources/templates/profile/profileMyLike.html
@@ -62,7 +62,7 @@
                 </button>
 
                 <!-- coming soon -->
-                <button data-action-url="/profile/likes" class="btn btn-outline-light custom-hover profileButton">
+                <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
                     좋아요
                 </button>
             </div>
